# Neuroswarm

./: CMakeLists.txt  Dockerfile  README.md  baselines.json  clean_ai_comments.py
agents/executor/: __init__.py  executor_agent.py
agents/planner/: __init__.py  planner_agent.py
agents/validator/: __init__.py  validator_agent.py
configs/: default_config.json
cuda/: attention_kernels.cu  comm_kernels.cu  memory_pool.cu  quantization_kernels.cu  rope_embeddings.cu
cuda/benchmarks/: bench_attention.cu  bench_communication.cu  bench_inference.cu
docs/: ARCHITECTURE.md  BENCHMARKS.md  CUDA_KERNELS.md
experiments/ablations/: run_ablations.py
experiments/driver_testing/: run_driver_tests.py
include/neuroswarm/: agent_runtime.h  common.h  communication.h  orchestrator.h
python/: bindings.cpp
python/neuroswarm/: __init__.py  config.py  swarm.py
src/: agent_runtime.cpp  circuit_breaker.cpp  communication.cpp  inference_engine.cpp  main.cpp  memory_manager.cpp  metrics_collector.cpp  orchestrator.cpp  sandbox.cpp
tests/: test_agents.py  test_attention_kernels.cpp  test_communication.cpp  test_memory_pool.cpp  test_orchestrator.cpp
tools/: bug_reporter.py  cuda_analyzer.py  driver_api.py  gpu_profiler.py  regression_detector.py
